Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "myip"
    # Uncomment and provide the correct name if using Managed Certificates
    # networking.gke.io/managed-certificates: managed-cert
    networking.gke.io/v1beta1.FrontendConfig: "my-frontend-config"
spec:
  tls:
  - hosts:
    - www.malbee.site
    - was.malbee.site
    secretName: www-frodo
  rules:
  - host: www.malbee.site
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
  - host: was.malbee.site
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: spring-svc
            port:
              number: 8080  # Adjust this port based on your java-svc configuration
